debugger: fix styling for debug item's white-space and width overflows.

--- a/src/style/object/debugger/_debugger.scss
+++ b/src/style/object/debugger/_debugger.scss
@@ -24,7 +24,8 @@
 
         display: block;
         float: left;
-        width: 100%;
+        min-width: 100%;
+        width: auto;
 
         overflow-x: scroll;
 
@@ -39,7 +40,7 @@
 
         border-bottom: 1px solid rgba( $black, .1 );
 
-        white-space: pre-line;
+        white-space: pre;
 
         &:hover {
             transition: background-color .1s ease-out;
@@ -54,7 +55,8 @@
         }
     }
 
-    .debugger-info {
+    .debugger-info,
+    .debugger-title {
 
         position: absolute;
         top: 0;
@@ -64,6 +66,7 @@
         line-height: r(2rem);
         min-height: r(2rem);
         height: r(2rem);
+        width: 208px;
         color: rgba( #FFF, .3 );
         border-bottom: 1px solid rgba( $black, .1 );
     }
